<resources>
    <string name="app_name">MyFirstGCMApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="send">Send</string>
    <string name="clear">Clear</string>
    <string name="notification_view_button" translatable="false">View</string>
    <string name="notification_dismiss_button" translatable="false">Dismiss</string>
    <string name="notification_collapse_button" translatable="false">Collapse</string>
    <string name="notification_expand_button" translatable="false">Expand</string>
    <string name="email">Email Address</string>
    <string name="refresh">Refresh</string>
    <string name="registration">Registration</string>
    <string name="json_string_not_exists">No Json-String detected</string>
    <string name="newInfo">New Info</string>
    <string name="title_activity_main_info">MainInfo</string>
    <string name="white">White</string>
    <string name="black">Black</string>
    <string name="main">Main</string>
    <string name="new_json_string">New message received!</string>
    <string name="json_string_refreshed">All data refreshed!</string>
</resources>
