<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/action_speech"
        android:icon="@drawable/ic_action_mic"
        android:showAsAction="ifRoom"
        android:orderInCategory="20"
        android:title="Speech"/>
    <item android:id="@+id/action_call"
        android:icon="@drawable/ic_action_call"
        android:showAsAction="ifRoom"
        android:orderInCategory="30"
        android:title="Call"/>
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="40"
        android:showAsAction="never" />
    <item android:id="@+id/action_registration"
        android:title="@string/registration"
        android:orderInCategory="50"
        android:showAsAction="never" />
    <group android:checkableBehavior="single">
    <item android:id="@+id/action_background_white"
        android:title="@string/white"
        android:orderInCategory="1001"
        android:showAsAction="never" />
    <item android:id="@+id/action_background_black"
        android:title="@string/black"
        android:orderInCategory="1002"
        android:showAsAction="never" />
    </group>
</menu>
