<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:fillViewport="false">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:measureWithLargestChild="false"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:layout_weight="1">

            <Button
                android:id="@+id/send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/send" />

            <Button
                android:id="@+id/clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/clear" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/refresh"
                android:onClick="refresh"
                android:id="@+id/button" /><![CDATA[

            Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Show alert"
                android:onClick="showAlert"
                android:id="@+id/button" />

        ]]>
        </LinearLayout>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@null"
            android:hint="@string/email"
            android:padding="5dp"
            android:singleLine="true"
            android:id="@+id/email" android:textColor="@color/black"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registration"
            android:id="@+id/button2"
            android:onClick="idRegistration"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/display"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:autoText="false"
            android:editable="false"
            android:enabled="true" />

    </LinearLayout>


</ScrollView>
